"ChangeLog"

2004-11-05	David Fang	<fangism@users.sourceforge.net>

	* Minor fixes in template code to make gcc-3.4.0 happy, 
	  changes which make code more standard-compliant. 

	* Recovered from a week of using only Apple gcc-3.3
	  while home directory on FreeBSD metwork was dead
	  on a failed hard drive.  Thank goodness for CVS 
	  (being on separate disk/server was *crucial*.)


2004-11-04	David Fang	<fangism@users.sourceforge.net>

	* art_object_instance.{h,cc}: Subclassed pint_instance_collection
	  into dimension-specific variants.  This is prototype code, 
	  switchable to old method (non-persistent) with SUBCLASS_PINT_ARRAY
	  flag defined in the header file.  
	  (Includes specialization for 0-dimensions.)
	  Will remove this switch after it is deemed stable.  

	* multikey*.h: Completed methods for read/writing multidimensional 
	  map collections to binary streams.  

	* list_vector_pool.h: simple template-based chunk allocator. 
	  Not fully debugged yet, so no warranty.  

	* Renamed some src/util files without the art_ prefix
	  because they are independent w.r.t. this project.  

	* Some general clean-up of obsolete #if 0 code-blocks.  


2004-11-01	David Fang	<fangism@users.sourceforge.net>

	* Insiginificant change.  Added CVS Id tags to all source files.   

	* Standard public class member typedefs added to 
	  hash_qmap and qmap data structures.  


2004-10-25	David Fang	<fangism@users.sourceforge.net>

	* Added auxiliary argument type to peristent object management.
	  This allows one to `escape' into a second-level of constructor 
	  tables, or pass at most one argument to initial allocation, 
	  in (class)::construct_empty().  

	* Auxiliary construction argument allows us to sub-type
	  (e.g. size_t templates) within a single registered type.  

	* art_util.{h,cc,tcc}:
	  Added more utility methods for binary I/O, for generic
	  value-sequence (list-like) persistence, and value-map (map-like)
	  persistence.  